--- a/style.css
+++ b/style.css
@@ -30,3 +30,5 @@ box-change{color:red}
 #userPick {text-align: left;}
 #check {font-size: 30px; color: #FCCACA; text-align: center;}
 #win2{position: fixed; top:20px; font-size: 40px; color:green; text-align: right;}
+#container {background-color:#EFEEEE }
+
